--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "@types/react": "^17.0.5",
     "@types/react-dom": "^17.0.5",
     "@types/reactstrap": "^8.7.2",
+    "formik": "^2.2.6",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "reactstrap": "^8.9.0",
     "typescript": "^4.2.4",
     "web-vitals": "^1.1.2"
   },
